gitops/namespaces/base/networking/traefik/internal_middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: internal
  namespace: networking
spec:
  chain:
    middlewares:
    - name: known-ips
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: known-ips
  namespace: networking
spec:
  ipWhiteList:
    sourceRange:
    - 192.168.4.0/24
    - 127.0.0.1/32
    - 192.168.3.0/24
    - 172.30.0.5/24
    - 192.168.0.1/32
    - 10.200.200.0/24
