gitops/namespaces/base/networking/traefik/dashboard_ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefikdashboard
  namespace: networking
spec:
  routes:
  - match: Host(`traefik-${CLUSTER_NAME}.${DNS_K8S_ZONE}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    middlewares:
    - name: networking-ak-outpost-traefik
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    secretName: traefik-dashboard-crt-tls
